# agentic-email-automate

./: Dockerfile  README.md  docker-compose.yml  orchestrator.py  pyproject.toml  requirements.txt  review_api.py  send_email_tool.py  sender_loop.py  worker.py
db/: db.py  db_outgoing.py  decisions.py  drafts.py  email.db  email.db-shm  email.db-wal
subagents/: classifier.py  main_agent.py  reply.py  schemas.py
